# leptos-routes

./: .gitignore  Cargo.toml  README.md
leptos-routes/: Cargo.toml
leptos-routes-macro/: Cargo.toml
leptos-routes-macro/src/: expr_wrapper.rs  lib.rs  module_path.rs  path.rs  route_def.rs  route_macro_args.rs  util.rs
leptos-routes-macro/src/generate/: mod.rs  route_struct.rs
leptos-routes-macro/tests/: 01-parse-routes.rs  02-without_views_not_router_generation.rs  03-with_views.rs  04-with_views_simple.rs  progress.rs
leptos-routes/src/: lib.rs
