[workspace]
resolver = "2"
members = ["leptos-routes", "leptos-routes-macro"]
default-members = ["leptos-routes"]

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
repository = "https://github.com/lpotthast/leptos-routes"
license = "MIT OR Apache-2.0"
readme = "./README.md"

[workspace.dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["extra-traits"] }
