[package]
name = "leptos-routes-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Proc macro deriving route structs for the leptos-routes crate.
"""
categories = ["web-programming", "gui"]
keywords = ["leptos-routes", "leptos", "routes", "routing", "router"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
darling = "0.20.10"
leptos_router = "0.7"
proc-macro-error2 = "2.0.1"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
assertr = "0.1.0"
leptos = { version = "0.7.7", features = ["ssr"] }
leptos-routes = { path = "../leptos-routes" }
leptos_router = { version = "0.7", features = ["ssr"] }
trybuild = { version = "1.0.99", features = ["diff"] }
