[package]
name = "leptos-routes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Fluent route declarations for the Leptos web framework.
"""
categories = ["web-programming", "gui"]
keywords = ["leptos-routes", "leptos", "routes", "routing", "router"]

[dependencies]
leptos-routes-macro = { version = "0.3.0", path = "../leptos-routes-macro" }
